fixed landing page (dark mode)

--- a/public/css/landingpage.css
+++ b/public/css/landingpage.css
@@ -227,7 +227,7 @@ background: #3C87C4
    #FFE9AD 1%,
     transparent 70%
   );
-min-height: 60vh;           
+min-height: 80vh;           
 color: #fff;
 border-bottom-left-radius: 15%;
 border-bottom-right-radius: 15%;
